sources/libClangSharp/ClangSharp.h

CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsInherited(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsInheritingConstructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsAggregate(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsCapturelessLambda(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsCXX11StandardLayout(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsDynamicClass(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsEffectivelyFinal(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsEmpty(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsGenericLambda(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsLambda(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsLiteral(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsPolymorphic(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsStandardLayout(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsTrivial(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsTriviallyCopyable(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsLateParsed(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsListInitialization(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsLocalVarDecl(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsLocalVarDeclOrParm(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsMemberSpecialization(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsNegative(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsNested(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsNonNegative(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsNoReturn(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsNothrow(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsOverloadedOperator(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsPackExpansion(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsParameterPack(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsPartiallySubstituted(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsPotentiallyEvaluated(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsPureVirtual(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsResultDependent(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsReversed(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsSigned(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsStatic(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsStaticDataMember(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsStdInitListInitialization(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsStrictlyPositive(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsTemplated(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsThisDeclarationADefinition(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsPropertyAccessor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsThrownVariableInScope(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsTransparent(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsTypeConcept(CXCursor C);